# mpm

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ProjectPlan_full.txt  README.md  conanfile.txt  docker_run.sh
docker/: install_dependencies.sh  run_mpm.sh
include/: InterpolationKernel.cuh  InterpolationKernel.h  MaterialModel.cuh  MaterialModel.h  TransferScheme.h  gpu.h  linalg.h  mesh_builder.h  mpm.cuh  mpm.h  options.h  particle_writer.h  renderer.h  svd3_cuda.h  types.h  utils.h
include/glad/: glad.h
include/igl/: slice.cpp
scenes/: liquid_bunny.toml  marshmallow_duck.toml  rubber_duck.toml  snowman.toml
shaders/: constant_fragment.glsl  cube_vertex.glsl
src/: glad.c  linalg.cpp  linalg.cu  main.cpp  main.cu  mpm.cpp  mpm.cu  particle_writer.cpp  renderer.cpp  utils.cpp
tests/: test_linalg.cpp  test_linalg.cu
